[gd_scene load_steps=4 format=2]

[ext_resource path="res://lazer.gd" type="Script" id=1]
[ext_resource path="res://lazer.png" type="Texture" id=2]
[ext_resource path="res://PlayerBullet.png" type="Texture" id=3]

[node name="Lazer" type="Sprite"]
texture = ExtResource( 2 )
offset = Vector2( 200, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 400, 2 )
script = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 400, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Outline" type="Sprite" parent="."]
modulate = Color( 0.12549, 0.0823529, 0.2, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
offset = Vector2( 200, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 400, 4 )

[node name="Start" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 2

[node name="UpdateStart" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="UpdateStart" to="." method="_on_UpdateStart_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
